--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "prop-types": "^15.6.1",
-    "react": "^16.3.1",
+    "react": "^16.8.0-alpha.0",
     "react-debounce-input": "^3.2.0",
-    "react-dom": "^16.3.1",
+    "react-dom": "^16.8.0-alpha.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4"
   },
